DE65 fix - prevent long text from breaking out of container

--- a/app/assets/scss/base/_utilities.scss
+++ b/app/assets/scss/base/_utilities.scss
@@ -23,7 +23,11 @@
     left:-9999px;
 }
 
-//summery detail (playback info after user-input)
+@mixin to-uppercase {
+    text-transform:uppercase;
+}
+
+
 //provides smaller width, more flexible container with a single/full column row
 @mixin summary-detail-list-flex {
     @media screen and (min-width:$device-medium) {
@@ -34,8 +38,46 @@
     }
 }
 
-@mixin to-uppercase {
-    text-transform:uppercase;
+@mixin summary-detail-list-item-float {
+    float:left;
+    @media screen and (max-width:$device-small) {
+        width:auto !important;
+    }
+}
+
+//summary detail item width for one column
+@mixin summary-detail-list-item-float-one-col {
+    p,
+    dd {
+        @include summary-detail-list-item-float;
+        width:73.5%;
+        @media screen and (max-width: $device-medium) {
+            width:66%;
+        }
+    }
+}
+
+//summary detail item width for the first column in a two column layout
+@mixin summary-detail-list-item-float-two-col-first {
+    p,
+    dd {
+        @include summary-detail-list-item-float;
+        @media screen and (max-width: $device-medium) {
+            width:auto;
+        }
+    }
+}
+
+//summary detail item width for the second/last column in a two column layout
+@mixin summary-detail-list-item-float-two-col-second {
+    p,
+    dd {
+        @include summary-detail-list-item-float;
+            width:44%;
+        @media screen and (max-width: $device-medium) {
+            width:auto;
+        }
+    }
 }
 
 //img wrapper to show-hide mobile/desktop images
